--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3.5.2
         
       - name: create azure_vm in DEV ENV 
-        run: az deployment group create --resource-group rg-01 --template-file apim.bicep
+        run: az deployment group create --resource-group rg-01 --template-file iac.bicep
     
   
   QA:
